<resources>
    <string name="app_name">DUTTrade</string>
    <string name="username_hint">用户名/手机号/邮箱</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="new_user_register">新用户注册></string>
    <string name="register">注册</string>
    <string name="certify_code">验证码</string>
    <string name="click_send">点击发送</string>
    <string name="send_code_after_several_second">%1$d s</string>
    <string name="phone_number_not_allow_empty">用户名不能为空</string>
    <string name="please_input_correct_phone_numbet">请输入正确的手机号</string>
    <string name="phone_verification">手机验证</string>
    <string name="none_verification">无验证</string>
    <string name="please_complete_info">请将信息填写完整</string>
    <string name="trade_center">交易中心</string>
    <string name="person_center">个人中心</string>
    <string name="exist">退出</string>
    <string name="add_goods">添加商品</string>
    <string name="please_login_first">请先登录</string>
    <string name="click_me_login">点我登录</string>
    <string name="good_name">名称</string>
    <string name="add_description">添加描述</string>
    <string name="cancel">取消</string>
    <string name="please_input_price">请输入价格</string>
    <string name="please_input_remain_num">请输入剩余库存</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="please_input_qq_number">请输入QQ号</string>
    <string name="please_input_wechat_count">请输入微信号</string>
    <string name="already_publish">已发表</string>
    <string name="server_error">服务器开小差了，请稍后重试</string>
    <string name="all_data_load_finish">没有更多数据了</string>
    <string name="commodity_deatil">宝贝详情</string>
    <string name="commodity_info">宝贝信息</string>
    <string name="comment">评论</string>
    <string name="stock">库存</string>
    <string name="description">简介</string>
    <string name="master">主人</string>
    <string name="my_commodity">我的商品</string>
    <string name="wechat">微信</string>
    <string name="phone_number">手机号</string>
    <string name="reserve">预定</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="delete_commodity_fail">删除商品失败，请检查网络连接</string>
    <string name="cancel_reserve">取消预定</string>
    <string name="on_building">正在建设中</string>
</resources>
