<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/login_icon_bg"
                android:src="@drawable/icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.j.ming.duttrade.views.ClearAbleEditText
                android:id="@+id/etUsername"
                style="@style/login_et_style"
                android:layout_marginTop="40dp"
                android:drawableEnd="@drawable/delete"
                android:drawableLeft="@drawable/user"
                android:drawableRight="@drawable/delete"
                android:drawableStart="@drawable/user"
                android:hint="@string/username_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.j.ming.duttrade.views.ClearAbleEditText
                android:id="@+id/etPwd"
                style="@style/login_et_style"
                android:drawableEnd="@drawable/delete"
                android:drawableLeft="@drawable/password"
                android:drawableRight="@drawable/delete"
                android:drawableStart="@drawable/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUsername" />

            <com.j.ming.duttrade.views.TinEditText
                android:id="@+id/etVerificationCode"
                style="@style/login_et_style"
                android:drawableLeft="@drawable/certify_code"
                android:drawableStart="@drawable/certify_code"
                android:hint="@string/certify_code"
                app:tints="LEFT"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPwd"

                />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <TextView
                android:id="@+id/tvClickSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/click_send"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/etVerificationCode"
                app:layout_constraintEnd_toEndOf="@+id/etVerificationCode"
                app:layout_constraintTop_toTopOf="@+id/etVerificationCode" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/etVerificationCode"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/etVerificationCode"
                app:layout_constraintTop_toBottomOf="@+id/etVerificationCode">
                <RadioButton
                    android:id="@+id/checkPhoneVerification"
                    android:text="@string/phone_verification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <!--<RadioButton-->
                    <!--android:id="@+id/checkEmailVerification"-->
                    <!--android:text="@string/email_verification"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
                <RadioButton
                    android:id="@+id/checkNoneVerification"
                    android:text="@string/none_verification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/btnRegister"
                app:layout_constraintStart_toStartOf="@+id/btnRegister"
                app:layout_constraintTop_toTopOf="@+id/btnRegister"
                app:layout_constraintBottom_toBottomOf="@id/btnRegister"
                />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
